--- a/6guard.cfg
+++ b/6guard.cfg
@@ -10,11 +10,11 @@ logfile = log/text.log
 [database_hpfeeds]
 #hpfeeds logging settings
 enabled = True
-HOST = hpfriends.honeycloud.net
-PORT = 20000
-IDENT = 96wzTQHn
-SECRET = Ajgfx9GhgnPuhFey
-CHANNEL = 6guard.attacks
+host = hpfriends.honeycloud.net
+port = 20000
+indent = 96wzTQHn
+secret = Ajgfx9GhgnPuhFey
+channel = 6guard.attacks
 
 [database_mongodb]
 # MongDB logging settings
