fix one spelling mistake

--- a/6guard.cfg
+++ b/6guard.cfg
@@ -12,7 +12,7 @@ logfile = log/text.log
 enabled = True
 host = hpfriends.honeycloud.net
 port = 20000
-indent = 96wzTQHn
+ident = 96wzTQHn
 secret = Ajgfx9GhgnPuhFey
 channel = 6guard.attacks
 
