add mongodb log module to 6guard

--- a/6guard.cfg
+++ b/6guard.cfg
@@ -23,5 +23,5 @@ host = localhost
 port = 27017
 user = 
 password =
-database = glastopf
-collection = events
+database = 6guard
+collection = attacks
