--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
  - echo $REPO
  - pwd
  - "sudo apt-get -qq update"
- - "sudo apt-get -qq install python-dev python-scapy mongodb python-pymongo"
+ - "sudo apt-get -qq install python-dev python-scapy python-pymongo"
 install:
  - cd /opt
  - git clone https://github.com/chenjj/ipv6-attack-detector.git
